WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312044
NavigationDisabler should not block navigations in unrelated frames
https://bugs.webkit.org/show_bug.cgi?id=312044
Summary
NavigationDisabler should not block navigations in unrelated frames
Chris Dumez
Reported
2026-04-11 07:40:27 PDT
NavigationDisabler should only block navigations in the frame it was created for.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-11 07:44:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62540
EWS
Comment 2
2026-04-12 02:03:09 PDT
Committed
311030@main
(a3ea192199a9): <
https://commits.webkit.org/311030@main
> Reviewed commits have been landed. Closing PR #62540 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-12 02:04:13 PDT
<
rdar://problem/174592318
>
WebKit Commit Bot
Comment 4
2026-04-12 18:02:09 PDT
Re-opened since this is blocked by
bug 312111
Chris Dumez
Comment 5
2026-04-12 18:39:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62603
Chris Dumez
Comment 6
2026-04-13 00:08:57 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59136
EWS
Comment 7
2026-04-13 01:31:54 PDT
Committed
311054@main
(e5d4f4568fde): <
https://commits.webkit.org/311054@main
> Reviewed commits have been landed. Closing PR #62603 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug